# yt-dlp-desktop

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  package-smoke.yml  release.yml
docs/: ARCHITECTURE.md  CAPABILITY_AUDIT.md  RELEASING.md
packaging/: components.json
scripts/: prepare-sidecars.ps1  prepare-sidecars.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/resources/: THIRD_PARTY_NOTICES.txt  YT_DLP_THIRD_PARTY_LICENSES.txt
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs  service.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: models.rs
src-tauri/src/integration/: dependencies.rs  mod.rs
src-tauri/src/integration/yt_dlp/: args.rs  mod.rs  parser.rs  probe.rs  runner.rs
src-tauri/src/persistence/: database.rs
src-tauri/src/platform/: mod.rs
src-tauri/tests/: runner_integration.rs
src/app/: App.tsx  store.ts
src/components/: AppShell.tsx  Diagnostics.tsx  EmptyState.tsx  StatusPill.test.tsx  StatusPill.tsx
src/features/download/: DownloadView.test.tsx  DownloadView.tsx
src/features/history/: HistoryView.tsx
src/features/queue/: JobCard.tsx  QueueView.tsx
src/lib/: api.ts  format.test.ts  format.ts
src/styles/: global.css
src/types/: contracts.ts
(+1 files in other folders)
