[package]
name = "yt-dlp-desktop"
version = "0.1.0"
description = "A task-focused desktop interface for yt-dlp"
authors = ["yt-dlp Desktop contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NitroDiesel/yt-dlp-desktop"
edition = "2024"
rust-version = "1.94"
default-run = "yt-dlp-desktop"

[lib]
name = "yt_dlp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate", "json", "chrono", "uuid"] }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.16"
tokio = { version = "1.53.1", features = ["process", "rt-multi-thread", "macros", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.22.0"
